--- a/web-app/styles/general.css
+++ b/web-app/styles/general.css
@@ -1,7 +1,7 @@
 /*--- FONT ---*/
 @font-face {
     font-family: 'K2D';
-    src: url(fonts/K2D-SemiBold.ttf);
+    src: url(fonts/K2D-Medium.ttf);
 }
 
 @font-face {
@@ -50,8 +50,8 @@ header{
 }
 #header-content #website-title{
     font-size: var(--t-24px);
-    font-weight: 400;
     font-family: 'K2D', sans-serif;
+    font-weight: 300;
 }
 #website-logo{
     -webkit-user-drag: none;
@@ -65,11 +65,10 @@ header{
     align-items: center;
 }
 
-
 .search-box{
-width: fit-content;
-height: fit-content;
-position: relative;
+    width: fit-content;
+    height: fit-content;
+    position: relative;
 }
 .input-search{
     height: 30px;
@@ -85,7 +84,6 @@ position: relative;
 }
 .input-search::placeholder{
     color: var(--black);
-    font-size: var(--t-14px);
     font-weight: 100;
 }
 .btn-search{
@@ -108,18 +106,24 @@ position: relative;
     width: 20px;
     height: 20px;
 }
-.btn-search:focus ~ .input-search{
+.input-search {
+    height: 30px;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    outline: none;
+    border-radius: 25px;
+    font-size: var(--t-14px);
+    background-color: transparent;
+    transition: all .5s ease-in-out;
+    padding-right: 40px;
+}
+
+.input-search.open {
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
-    border-bottom:1px solid var(--black);
-    transition: all 500ms ;
+    border-bottom: 1px solid var(--black);
 }
-.input-search:focus{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid var(--black);
-    transition: all 500ms ;
-}
+
   
